<resources>
    <string name="app_name">2wqes</string>
    <string name="facebook_app_id">&lt;!--TODO YOUR APP ID HERE--&gt;</string>
    <string name="fb_login_protocol_scheme">fb&lt;!--TODO YOUR APP ID HERE--&gt;</string>
<string name="lbl_note">Note</string>
<string name="lbl_preparing">Preparing</string>
<string name="lbl_credit_card">Credit Card</string>
<string name="lbl_sunday">Sunday</string>
<string name="lbl_customizable">Customizable</string>
<string name="msg_your_paypal_pay">Your Paypal Payment Method</string>
<string name="lbl_discount_code">Discount Code</string>
<string name="lbl_nearest">Nearest</string>
<string name="msg_10_30am_10_301">10:30am - 10:30pm</string>
<string name="msg_tell_us_what_yo">Tell us what you loved about this app, or what better we can do.</string>
<string name="lbl_50">+ ���50</string>
<string name="lbl_ollarica">Ollarica</string>
<string name="msg_add_tip_here_to">Add tip here to support rider.</string>
<string name="msg_set_your_new_pa">Set your new password and sign in again.</string>
<string name="msg_flat_discount_o">flat discount on your first order</string>
<string name="msg_select_delivery">Select Delivery Location</string>
<string name="msg_7100_athem_ple">7100, Athem Pleace, Gwarinpa, Abuja.</string>
<string name="lbl_speaker">Speaker</string>
<string name="lbl_pizza_hut">Pizza Hut</string>
<string name="lbl_placed">Placed</string>
<string name="lbl_food20">FOOD20</string>
<string name="lbl_no_order_yet">No order yet!</string>
<string name="lbl_5_days_ago">5 Days ago</string>
<string name="lbl_45">���45</string>
<string name="msg_zone_a_legisla">zone A\' Legislative Quarters, Gwarinpa, Abuja.</string>
<string name="msg_gudu_district">Gudu District, Apo Mall, , Gwarinpa, Abuja.</string>
<string name="lbl_packing">Packing</string>
<string name="lbl_app_version">App Version</string>
<string name="lbl_save1">save</string>
<string name="lbl_dispute_type">Dispute Type</string>
<string name="msg_please_enter_yo">Please enter your mobile below to receive an OTP.</string>
<string name="lbl_5_2_km">5.2 Km</string>
<string name="lbl_order_again">Order Again</string>
<string name="lbl_30">���30</string>
<string name="lbl_tandoori_paneer">Tandoori Paneer</string>
<string name="lbl_password">Password</string>
<string name="lbl_my_disputes">My Disputes</string>
<string name="msg_2_lollipop_extr">2 Lollipop Extra</string>
<string name="lbl_iefood00007">#IEFOOD00007</string>
<string name="lbl_make_as_default">Make as default</string>
<string name="lbl_american">American</string>
<string name="lbl_legal">Legal</string>
<string name="lbl_restaurant">Restaurant</string>
<string name="lbl_20">- ���20</string>
<string name="lbl_gst">GST</string>
<string name="lbl_category">Category</string>
<string name="msg_house_flat">House / Flat / Block No*</string>
<string name="lbl_vaild_thru">Vaild Thru*</string>
<string name="msg_you_will_find_a">You will find all notifications here.</string>
<string name="msg_10_30am_10_30">10:30am - 10:30pm (Today)</string>
<string name="msg_mark_as_favouri">Mark as favourite</string>
<string name="msg_delay_in_delive">Delay in Delivery</string>
<string name="lbl_offers">Offers</string>
<string name="lbl_501">���50</string>
<string name="msg_wrong_missing">Wrong /missing Order</string>
<string name="lbl_wallet">Wallet</string>
<string name="lbl_500">���500</string>
<string name="lbl_feedback">Feedback</string>
<string name="msg_recent_location">Recent Locations</string>
<string name="lbl_10_km">10 Km</string>
<string name="msg_enter_4_digits">Enter 4 digits OTP sent to +234-9135715252.</string>
<string name="lbl_refer_a_friend">Refer a Friend</string>
<string name="lbl_raise_a_dispute">Raise a Dispute</string>
<string name="msg_tasty_home_cook">Tasty home cooked meals, without all the fuss. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</string>
<string name="lbl_delivery_charge">Delivery Charge</string>
<string name="msg_restaurant_offe">Restaurant offer</string>
<string name="lbl_10">���10</string>
<string name="msg_credit_debit_c">Credit/ Debit Cards</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_send">Send</string>
<string name="lbl_850">���850</string>
<string name="lbl_privacy_policy">Privacy Policy</string>
<string name="lbl_keyboard">Keyboard</string>
<string name="lbl_mobile_or_email">Mobile or Email</string>
<string name="lbl_your_message">Your Message</string>
<string name="lbl_done">Done</string>
<string name="msg_1212_3434_565">1212  3434  5656  7878</string>
<string name="msg_order_valid_o">- Order valid one time
- Order valid only on paytm Wallet
- One place one time use
- Code valid only select users
- Code valid only on select restaurants.
- Other T&amp;C\'s may apply</string>
<string name="msg_sentosa_park_an">Sentosa Park and Recreation, Gwarinpa, Abuja.</string>
<string name="lbl_the_taj">The Taj</string>
<string name="lbl_01">0</string>
<string name="lbl_cash">Cash</string>
<string name="msg_initiate_disput">Initiate dispute on recent 2 hours orders</string>
<string name="lbl_repeat_order">Repeat order</string>
<string name="lbl_phonepe">PhonePe</string>
<string name="msg_re_enter_passwo">Re-enter Password*</string>
<string name="lbl_6655443322">6655443322</string>
<string name="lbl_pure_veg">Pure Veg</string>
<string name="msg_please_enter_va">Please enter valid password.</string>
<string name="lbl_sign_in_error">Sign In Error</string>
<string name="lbl_cart">Cart</string>
<string name="lbl_pay">Pay</string>
<string name="lbl_promo_code">Promo code</string>
<string name="msg_a_legislative">A\' Legislative Quaters, Gwarinpa, Abuja.</string>
<string name="msg_lorem_ipsum_is">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s. when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</string>
<string name="lbl_settings">Settings</string>
<string name="lbl_chery_poal">Chery Poal</string>
<string name="lbl_gmail">Gmail</string>
<string name="lbl_saturday">Saturday</string>
<string name="lbl_john_row_house">John ROW House</string>
<string name="msg_add_items_in_ca">Add items in cart to place an order.</string>
<string name="msg_password_must_c">Password must contain at least 8 characters, 1 lower case (a-z) &amp; 1 Upper case (A-Z), 1 number (0-9) or a symbol.</string>
<string name="lbl_non_veg">Non Veg</string>
<string name="lbl_reviews">Reviews</string>
<string name="lbl_no">No</string>
<string name="lbl_on_the_way">On the Way</string>
<string name="lbl_view_details">View Details</string>
<string name="msg_thank_you_t">Thank you...  thank you...  thank you so much for rating us. we are glad you love us:)</string>
<string name="lbl_home">Home</string>
<string name="lbl_420">���420</string>
<string name="lbl_first_name">First Name</string>
<string name="lbl_add_review">+ Add Review</string>
<string name="lbl_300">���300</string>
<string name="lbl_country">Country*</string>
<string name="lbl_tomato_pizza">Tomato, Pizza</string>
<string name="msg_please_enter_pa">Please enter password.</string>
<string name="lbl_abe_igi">ABE-IGI</string>
<string name="msg_sentosa_park_r">Sentosa Park  Recreation, Gwarinpa, Abuja.</string>
<string name="lbl_landmark">Landmark*</string>
<string name="msg_add_new_payment">Add New Payment Method</string>
<string name="msg_tomato_olives">Tomato, Olives, Onion</string>
<string name="lbl_order">Order</string>
<string name="lbl_rate_an_app">Rate an App</string>
<string name="msg_abuja_railways">Abuja Railways Station</string>
<string name="lbl_2_lollipop">2 Lollipop</string>
<string name="lbl_notifications">Notifications</string>
<string name="msg_the_point_of_us">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.</string>
<string name="msg_forgot_password">Forgot password?</string>
<string name="lbl_cancel">Cancel</string>
<string name="lbl_775">���775</string>
<string name="lbl_on_order_above">On order above</string>
<string name="msg_chicken_capsic">Chicken, Capsicum</string>
<string name="lbl_abuja_airport">Abuja Airport</string>
<string name="lbl_edit_profile">Edit Profile</string>
<string name="lbl_bill_details">Bill Details</string>
<string name="lbl_jilu_das">Jilu Das</string>
<string name="msg_current_passwor">Current Password Error</string>
<string name="msg_no_location_add">No location added yet.</string>
<string name="lbl_support">Support</string>
<string name="msg_monday_to_frida">Monday to Friday</string>
<string name="lbl_july_2020">July 2020</string>
<string name="lbl_info">Info</string>
<string name="lbl_shipper_01_30">Shipper 01:30</string>
<string name="lbl_barkono_grill">Barkono `Grill</string>
<string name="lbl_400">���400</string>
<string name="msg_30_off_on_all">30% off on all orders</string>
<string name="lbl_post">Post</string>
<string name="lbl_chicken_wings">Chicken wings</string>
<string name="msg_get_your_free">Get your free ���250 credit.</string>
<string name="msg_no_payment_meth">No payment method added.</string>
<string name="lbl_jimty_boss">Jimty Boss</string>
<string name="lbl_pending">Pending</string>
<string name="lbl_enable_location">Enable location</string>
<string name="msg_unregistered_mo">Unregistered mobile number and password.</string>
<string name="lbl_upi">UPI</string>
<string name="lbl_10_mins_ago">10 Mins ago</string>
<string name="lbl_issues_id">Issues ID :</string>
<string name="msg_add_payment_met">Add payment method to complete the payment online while ordering.</string>
<string name="msg_400_paid">���400  |  Paid by Credit Card</string>
<string name="lbl_premium_offers">Premium Offers</string>
<string name="lbl_750">���750</string>
<string name="lbl_margherita">Margherita</string>
<string name="lbl_open_time">Open Time:</string>
<string name="msg_share_with_frie">Share with friend</string>
<string name="lbl_spanish">Spanish</string>
<string name="msg_delivery_locati">Delivery Location</string>
<string name="lbl_delivery_time">Delivery time</string>
<string name="lbl_potato_onion">Potato, Onion</string>
<string name="lbl_italian">Italian</string>
<string name="msg_incorrect_otp">Incorrect OTP, Try again.</string>
<string name="msg_delivery_in_30">Delivery in 30 Min</string>
<string name="lbl_food">Food</string>
<string name="lbl_100">���100</string>
<string name="lbl_debit_card">Debit Card</string>
<string name="msg_confirm_locatio">Confirm Location &amp; Proceed</string>
<string name="msg_your_cart_is_em">Your cart is empty.</string>
<string name="lbl_total">Total</string>
<string name="lbl_6188776655">6188776655</string>
<string name="msg_poalchery143_ap">poalchery143@apple.com</string>
<string name="lbl_201">���20</string>
<string name="msg_9_30am_11_30p">9:30am - 11:30pm</string>
<string name="msg_are_you_sure_yo">Are you sure you want to delete this address?</string>
<string name="lbl_details">Details</string>
<string name="msg_9_30am_12_00p">9:30am - 12:00pm</string>
<string name="lbl_apply">Apply</string>
<string name="msg_delivery_addres">Delivery Address</string>
<string name="lbl_yes">Yes</string>
<string name="msg_if_you_didn_t_r">If you didn\'t receive a code! Resend Now</string>
<string name="msg_your_dispute_ha">Your dispute has been
submitted successfully.</string>
<string name="msg_enter_4_digit_r">Enter 4 Digit Recovery Code</string>
<string name="lbl_get">Get</string>
<string name="msg_your_dispute_id">Your dispute id is</string>
<string name="lbl_go_to_home">Go to home</string>
<string name="lbl_valid_till">Valid till</string>
<string name="lbl_opening_hours">Opening Hours</string>
<string name="msg_please_check_th">Please check the notification within X hrs/days for dispute status.</string>
</resources>