<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="cartOffersPromoCodePopupVM" type="com.wqes.app.modules.cartofferspromocodepopup.data.viewmodel.CartOffersPromoCodePopupVM"/>
    </data>
    <FrameLayout android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleblack_900">
        <LinearLayout android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_4">
            <TextView android:gravity="top|center"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_31px"
                android:layout_width="wrap_content"
                android:text="@string/lbl_food20" style="@style/textStylePoppinssemibold20"/>
            <LinearLayout android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_29px"
                android:layout_marginStart="@dimen/_29px"
                android:layout_marginTop="@dimen/_15px"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:gravity="top|start"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.09"
                    android:layout_width="0dp"
                    android:text="@string/lbl_get" style="@style/textStylePoppinsregular14"/>
                <TextView android:gravity="top|start"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3px"
                    android:layout_weight="0.09"
                    android:layout_width="0dp"
                    android:text="@string/lbl_201" style="@style/textStylePoppinsmedium12"/>
                <TextView android:gravity="top|start"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3px"
                    android:layout_weight="0.81"
                    android:layout_width="0dp"
                    android:text="@string/msg_flat_discount_o" style="@style/textStylePoppinsregular14"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_29px"
                android:layout_marginStart="@dimen/_29px"
                android:layout_marginTop="@dimen/_3px"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:gravity="top|start"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.78"
                    android:layout_width="0dp"
                    android:text="@string/lbl_on_order_above" style="@style/textStylePoppinsregular14"/>
                <TextView android:gravity="top|start"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4px"
                    android:layout_weight="0.22"
                    android:layout_width="0dp"
                    android:text="@string/lbl_100" style="@style/textStylePoppinsmedium12"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_29px"
                android:layout_marginStart="@dimen/_29px"
                android:layout_marginTop="@dimen/_3px"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_14px"
                    android:layout_width="@dimen/_14px" android:src="@drawable/_4b0bd8ce40e9179ba94e89d3bb34724a"/>
                <TextView android:gravity="top|start"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4px"
                    android:layout_width="wrap_content"
                    android:text="@string/lbl_valid_till" style="@style/textStylePoppinsregular14"/>
                <TextView android:gravity="top|start"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2px"
                    android:layout_width="wrap_content"
                    android:text="@string/lbl_july_2020" style="@style/textStylePoppinsmedium12"/>
            </LinearLayout>
            <TextView android:gravity="top|start"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_29px"
                android:layout_marginStart="@dimen/_29px"
                android:layout_marginTop="@dimen/_14px"
                android:layout_width="wrap_content"
                android:text="@string/lbl_details" style="@style/textStyleCerebriSanssemibold14"/>
            <TextView android:gravity="top|start"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_29px"
                android:layout_marginStart="@dimen/_29px"
                android:layout_width="match_parent"
                android:text="@string/msg_order_valid_o" style="@style/textStyleCerebriSansregular14"/>
            <LinearLayout android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30px"
                android:layout_marginStart="@dimen/_30px"
                android:layout_marginTop="@dimen/_14px"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:gravity="top|start"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.18"
                    android:layout_width="0dp"
                    android:text="@string/lbl_cancel" style="@style/textStylePoppinsregular14_1"/>
                <ImageView android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_53px"
                    android:layout_width="@dimen/_174px" imageRes="@{@drawable/_863d40555955e8acdd6b348a778439f2}"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:gravity="center" android:id="@+id/btnApply"
            android:layout_gravity="bottom|end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_100px"
            android:layout_marginEnd="@dimen/_47px"
            android:layout_marginTop="@dimen/_100px"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/_12px"
            android:paddingEnd="@dimen/_30px"
            android:paddingStart="@dimen/_30px"
            android:paddingTop="@dimen/_15px"
            android:text="@string/lbl_apply" style="@style/textStylePoppinsmedium14_1"/>
    </FrameLayout>
</layout>
