<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileDeliveryAddressPopupVM" type="com.wqes.app.modules.profiledeliveryaddresspopup.data.viewmodel.ProfileDeliveryAddressPopupVM"/>
    </data>
    <FrameLayout android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleblack_900">
        <LinearLayout android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_4">
            <TextView android:gravity="top|center"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32px"
                android:layout_width="wrap_content"
                android:text="@string/msg_delivery_addres" style="@style/textStylePoppinssemibold18"/>
            <TextView android:gravity="top|start"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32px"
                android:layout_marginStart="@dimen/_32px"
                android:layout_marginTop="@dimen/_21px"
                android:layout_width="match_parent"
                android:text="@string/msg_are_you_sure_yo" style="@style/textStylePoppinsregular14"/>
            <LinearLayout android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30px"
                android:layout_marginStart="@dimen/_30px"
                android:layout_marginTop="@dimen/_25px"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:gravity="top|center"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.07"
                    android:layout_width="0dp"
                    android:text="@string/lbl_no" style="@style/textStylePoppinsregular14_1"/>
                <ImageView android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_53px"
                    android:layout_width="@dimen/_174px" imageRes="@{@drawable/_7f1394e492b85c2229aca39211da0352}"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:gravity="center" android:id="@+id/btnYes"
            android:layout_gravity="center|end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_47px"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/_12px"
            android:paddingEnd="@dimen/_30px"
            android:paddingStart="@dimen/_30px"
            android:paddingTop="@dimen/_15px"
            android:text="@string/lbl_yes" style="@style/textStylePoppinsmedium14_1"/>
    </FrameLayout>
</layout>
