<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgotPasswordOtpDataError1VM" type="com.wqes.app.modules.forgotpasswordotpdataerror1.data.viewmodel.ForgotPasswordOtpDataError1VM"/>
    </data>
    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:layout_gravity="start"
            android:layout_height="@dimen/_17px"
            android:layout_marginEnd="@dimen/_20px"
            android:layout_marginStart="@dimen/_20px"
            android:layout_marginTop="@dimen/_60px"
            android:layout_width="@dimen/_10px" android:src="@drawable/_f3ee32990476ecf23ff68e15dcc5dc46"/>
        <TextView android:gravity="top|start"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20px"
            android:layout_marginStart="@dimen/_20px"
            android:layout_marginTop="@dimen/_76px"
            android:layout_width="match_parent"
            android:text="@string/msg_enter_4_digit_r" style="@style/textStylePoppinssemibold20"/>
        <TextView android:gravity="top|start"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20px"
            android:layout_marginStart="@dimen/_20px"
            android:layout_marginTop="@dimen/_11px"
            android:layout_width="match_parent"
            android:text="@string/msg_enter_4_digits" style="@style/textStylePoppinsregular14_11"/>
        <FrameLayout android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20px"
            android:layout_marginStart="@dimen/_20px"
            android:layout_marginTop="@dimen/_36px"
            android:layout_width="match_parent" style="@style/groupStyle_1">
            <FrameLayout android:layout_gravity="center|start"
                android:layout_height="match_parent" android:layout_width="match_parent"/>
        </FrameLayout>
        <TextView android:gravity="top|start"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20px"
            android:layout_marginStart="@dimen/_20px"
            android:layout_marginTop="@dimen/_11px"
            android:layout_width="match_parent"
            android:text="@string/msg_incorrect_otp" style="@style/textStylePoppinsmedium14_10"/>
        <TextView android:gravity="top|center"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_45px"
            android:layout_marginStart="@dimen/_45px"
            android:layout_marginTop="@dimen/_87px"
            android:layout_width="match_parent"
            android:text="@string/msg_if_you_didn_t_r" style="@style/textStylePoppinssemibold16_1"/>
    </LinearLayout>
</layout>
